# PayGlue-OS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
backend/src/payglue_backend/: __init__.py
backend/src/payglue_backend/authn/: __init__.py  authentication.py  creem_access.py  creem_webhook.py  invitations.py  lifecycle_emails.py  newsletter.py  polar_access.py  profile_gate.py  rbac.py  step_up.py  verifier.py  views.py
backend/src/payglue_backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/src/payglue_backend/core/: __init__.py  email_backend.py  errors.py  idempotency.py  interfaces.py  mapping.py  models.py  registry.py  (+1 more)
backend/tests/service/: test_api_throttling.py  test_audit_events_api.py  test_auth_session_api.py  test_billing_api.py  test_db_idempotency_store.py  test_orchestrator_db_integration.py  test_product_mapping_resolver.py  test_rbac_helpers.py  test_team_api.py  test_tenant_enabled_runtime.py  test_tenant_events_api.py  test_tenant_integrations_api.py  test_tenant_middleware.py  test_tenant_models.py  test_tenants_api.py  test_webhook_ingest_api.py  test_webhook_tasks.py
backend/tests/unit/: test_auth_verifier.py  test_credentials_crypto.py  test_credentials_provider.py  test_firestore_credentials_provider.py  test_ghost_adapter.py  test_orchestrator.py  test_polar_adapter.py  test_registry.py  test_webhook_wiring.py
(+216 files in other folders)
