[project]
name = "payglue-backend"
version = "0.1.0"
description = "PayGlue backend service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4,<6",
    "cryptography>=48,<50",
    "django>=5.1,<7",
    "django-tenants>=3.7,<4",
    "djangorestframework>=3.15,<4",
    "gunicorn>=23,<24",
    "psycopg[binary]>=3.2,<4",
    "redis>=5.0,<6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-django>=4.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "payglue_backend.config.settings"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
